# crew-flow-manager

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  Taskfile.yml  docker-compose.yml  mise.toml  test.sh
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: executions.py  flows.py  mcp_servers.py  mcp_tools.py  schedules.py  websocket.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: flow_executor.py  flow_validator.py  mcp_tools_loader.py  scheduler.py  websocket_manager.py
docs/: CONTRIBUTING.md  CREWAI_EXECUTION.md  LOCAL_LLM_SETUP.md  MCP_DASHBOARD.md  RELEASE_NOTES.md  TASK_SELECTION.md  TESTING.md  VERIFICATION.md
examples/: README.md  multi-agent-content-pipeline.yaml  sample_flow.yaml  simple_flow.yaml
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/examples/: custom-endpoint-example.yaml  multi-agent-software-dev.yaml  ollama-flow-example.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/pages/: ExecutionsPage.tsx  FlowsPage.tsx  HomePage.tsx  MCPToolsPage.tsx  SchedulesPage.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
