[project]
name = "crewai-flow-manager-backend"
version = "0.1.0"
description = "CrewAI Flow Manager Backend - FastAPI server for managing and executing CrewAI flows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.10.4",
    "crewai>=1.5.0",
    "crewai-tools>=1.5.0",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.9.3",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
